fix margin on small gutter

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -99,6 +99,7 @@ a.underline {
     padding-right: $space;
     padding-left: $space;
   }
+  margin: 0;
 }
 
 .row.no-gutter {
